<resources>
    <string name="app_name">Devart Lab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="search">Search</string>
    <string name="loading">Loading&#8230;</string>
    <string name="google_maps_key">AIzaSyBtCSwehQfoAdYemxDzJrKInCYafq83e6g</string>
    <string-array name="vacationname">
        <item>إعتيادي</item>
        <item>مرضي</item>
        <item>عارضه</item>
    </string-array>
    <string name="title_activity_call_management">CallManagementActivity</string>
    <string name="share_using">Share using</string>
    <string name="choose_customer">Choose Customer</string>
    <string name="end_shift">End Shift</string>
    <string name="start_shift">Start Shift</string>
    <string name="submit_report">Submit Report</string>
    <string name="default_notification_channel_id">channel id</string>
    <string name="stop_salary_penalties">Stop Salary Penalties</string>
    <string name="permission_to_leave">Permission To Leave</string>
    <string name="errand">Errand</string>
    <string name="tradiness_penalties">Tradiness Penalties</string>
    <string name="no_finger_penalties">No Finger Penalties</string>
    <string name="absent_without_permission">Absent Without Permission</string>
    <string name="add_to_plan">Add to plan</string>
    <string name="search_by_customer_name">search by Customer name</string>
    <string name="result_empty_n_please_try_again_with_different_values">Result empty! \n please try again with different values</string>
    <string name="add_to_list">Add To List</string>
    <string name="notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="over_time">Over Time</string>
    <string name="request_start_at">Request Start At</string>
    <string name="request_end_at">Request End At</string>
    <string name="address">address</string>
    <string name="brick">brick</string>
    <string name="specialist">specialist</string>
    <string name="degree">degree</string>
    <string name="activity">activity</string>
    <string name="ytd">YTD</string>
    <string name="last_visit">last visit</string>
    <string name="last_3_cycle">last 3 cycle</string>
    <string name="plan">Plan</string>
    <string name="report">Report</string>
    <string name="daily_report">Daily Report</string>
    <string name="sync_data">Sync Data</string>
    <string name="all">All</string>
    <string name="finish_visit">Finish Visit</string>
    <string name="choose_start_point">Choose start point</string>
    <string name="choose_employee">Choose Employee</string>
    <string name="search_by_employee_name">search by employee name</string>
    <string name="no_employees">No employees</string>
    <string name="choose_area">Choose Area</string>
    <string name="choose_government">Choose Government</string>
    <string name="choose_city">Choose City</string>
    <string name="search_by_pharmacy">search by pharmacy</string>
    <string name="choose_title">Choose Title</string>
    <string name="add_all_to_plan">Add All to Plan</string>
    <string name="please_search_for_employees">Please search for employees</string>
    <string name="title">title</string>
    <string name="current_cycle">Current Cycle</string>
    <string name="achievement">achievement</string>
    <string name="frequency">frequency</string>
    <string name="coverage">Coverage</string>
    <string name="day_details">Day Details</string>
    <string name="social_activity">Social Activity</string>
    <string name="emp_name">Emp Name</string>
    <string name="emp_title">Emp Title</string>
    <string name="emp_serial">Emp Serial</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="call_management">Call Management</string>
    <string name="self_service">Self Service</string>
    <string name="my_profile">My Profile</string>
    <string name="market_request">Market Request</string>
    <string name="trade">Trade</string>
    <string name="total_cost">Total Cost</string>
    <string name="total_gain">Total Gain : </string>
    <string name="applicant">مقدم الطلب</string>
    <string name="Specialization">التخصص</string>
    <string name="location_gift">المكان/الهدية</string>
    <string name="region">المنطقة</string>
    <string name="Managing_Director">المدير المسئول</string>
    <string name="statement_of_expected_return">بيان بالعائد المتوقع</string>
    <string name="pharmacies_statement">بيان بالصيدليات</string>
    <string name="contract_start">بداية التعاقد</string>
    <string name="end_of_contract_period">نهاية فترة التعاقد</string>
    <string name="cost_items">Cost Items</string>
    <string name="gain_details">Gain Details</string>
    <string name="customers">Customers</string>
    <string name="approved_by">Approved By</string>
    <string name="name">name</string>
    <string name="list">List</string>
    <string name="un_cover">Un Cover</string>
    <string name="namee">الأسم</string>
    <string name="legal_name">الأسم القانونى</string>
    <string name="mobile_number">رقم الهاتف</string>
    <string name="add_a_new_province">إضافة محافظة جديدة</string>
    <string name="add_a_new_city">إضافة مدينة جديدة</string>
    <string name="add_a_new_region">إضافة منطقة جديدة</string>
    <string name="Address">العنوان</string>
    <string name="date_created">تاريخ الإنشاء</string>
    <string name="print">print</string>
    <string name="bluetooth_list">Bluetooth List</string>
    <string name="ip_address">IP Address :</string>
    <string name="async_mode">Async Mode</string>
    <string name="printer_open">Printer Open</string>
    <string name="try_again">Try Again</string>
    <string name="apply">Apply</string>
    <string name="work_day">Work Day</string>
    <string name="empid">empId</string>
    <string name="get_plan">Get Plan</string>
    <string name="update">Update</string>
    <string name="new_expense">New Expense</string>
    <string name="date">Date</string>
    <string name="expense_type">Expense Type</string>
    <string name="previous_km_value">Previous Km Value</string>
    <string name="current_km_value">Current Km Value</string>
    <string name="quantity">Qty</string>
    <string name="value">Value</string>
    <string name="add">Add</string>
    <string name="new_experience">New Experience</string>
    <string name="choose_job_title">Choose Job Title</string>
    <string name="company_name">Company Name</string>
    <string name="start_at">Start At</string>
    <string name="end_at">End At</string>
    <string name="training">Training</string>
    <string name="Prefecture_name">أسم المحافظة</string>
    <string name="city_name">أسم المدينة</string>
    <string name="area_name">أسم المنطقة</string>
    <string name="add_new_task">Add New Task</string>
    <string name="task_description">Task Description</string>
    <string name="new_penalty">New Penalty</string>
    <string name="penalty_type">Penalty Type</string>
    <string name="reason_type">Reason Type</string>
    <string name="new_vacation">New Vacation</string>
    <string name="from">From : </string>
    <string name="to">To : </string>
    <string name="qty">Qty</string>
    <string name="ahmed_taher">Ahmed taher</string>
    <string name="permission">أذن</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="working_day">Working Day</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="classs">class</string>
    <string name="choose_activity_type">Choose Activity Type</string>
    <string name="choose_mode">Choose mode</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="confirm_approval">Confirm Approval</string>
    <string name="you_are_about_to">You are about to</string>
    <string name="requests">requests</string>
    <string name="cancel">cancel</string>
    <string name="ok">OK</string>
    <string name="employee_appraisal">Employee Appraisal</string>
    <string name="place">المكان :</string>
    <string name="valid_visit">Valid Visit</string>
    <string name="cycle_name">Cycle Name</string>
    <string name="cycle_start">Cycle Start</string>
    <string name="cycle_end">Cycle End</string>
    <string name="new_cycle">New Cycle</string>
    <string name="penalty_quantity">Penalty Quantity :</string>
    <string name="activity_master_name">activity master name</string>
    <string name="brik">brik</string>
    <string name="gyna">GYNA</string>
    <string name="am_shift">Am Shift</string>
    <string name="cover">Cover</string>
    <string name="plan_visit">Plan Visit</string>
    <string name="visit_num">Visit Num</string>
    <string name="pm_shift">Pm Shift</string>
    <string name="change_cycle">Change Cycle</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="meals">وجبات</string>
    <string name="task">Task</string>
    <string name="hr_requests">HR Requests</string>
    <string name="employees_services">Employees Services</string>
    <string name="product">Product</string>
    <string name="price">price</string>
    <string name="unit">unit</string>
    <string name="amount">amount</string>
    <string name="expenses">Expenses</string>
    <string name="salary">Salary</string>
    <string name="attendance">Attendance</string>
    <string name="sync_plan">Sync Plan</string>
    <string name="medical_rep_report">Medical Rep Report</string>
    <string name="plan_and_cover_report">Plan And Cover Report</string>
    <string name="super_visor_report">Super Visor Report</string>
    <string name="double_visit_report">Double Visit Report</string>
    <string name="start_point_report">Start Point Report</string>
    <string name="list_permission">List Permission</string>
    <string name="plan_permission">Plan Permission</string>
    <string name="role_play">Role-Play</string>
    <string name="sync">Sync</string>
    <string name="main_home">Main Home</string>
    <string name="logout">Logout</string>
    <string name="employees_self_services">Employees self services</string>
    <string name="rate_us">Rate Us</string>
    <string name="search_for_update">Search For Update</string>
    <string name="share_app">Share App</string>
    <string name="start_work">Start Work</string>
    <string name="actionbar_spinner">ActionBar Spinner</string>
    <string name="update_plan">Update plan</string>
    <string name="change_language">Change Language</string>
    <string name="contacts_list">Contacts List</string>
    <string name="action_problem_register">مشكله فى التسجيل</string>
    <string name="action_active_customer">مشكله فى تفعيل العميل</string>
    <string name="action_order_problem"> تاخير فى تسليم الاوردر</string>
    <string name="action_problem_old_ticket"> مشكلة فى تيكيت قديم</string>
    <string name="action_other">اخر</string>
    <string name="action_all">all</string>
    <string name="action_open">Open</string>
    <string name="action_inreview">Processing</string>
    <string name="action_close">Closed</string>
    <string name="action_pending">Pending</string>
    <string name="img">img</string>
    <string name="add_event">Add Event</string>
    <string name="label">Label</string>
    <string name="view_all">View All</string>
    <string name="request">Request</string>
    <string name="event">Event</string>
    <string name="holiday">Holiday</string>
    <string name="meeting_room">Meeting room</string>
    <string name="action_task">Task</string>
    <string name="action_request">Request</string>
    <string name="action_event">Event</string>
    <string name="action_holiday">Holiday</string>
    <string name="action_meeting_room">Meeting Room</string>
</resources>