<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/Home"
            android:icon="@drawable/home"
            android:title="@string/self_service" />

        <item
            android:id="@+id/expenses"
            android:icon="@drawable/expenses"
            android:title="@string/expenses"
            android:visible="true"/>

        <item
            android:id="@+id/salary"
            android:icon="@drawable/salary"
            android:title="@string/salary"
            android:visible="true"/>

        <item
            android:id="@+id/attendance"
            android:icon="@drawable/fingerprint"
            android:title="@string/attendance"
            android:visible="true"/>

        <item
            android:id="@+id/hrRequests"
            android:icon="@drawable/request"
            android:title="@string/hr_requests"
            android:visible="true"/>

        <item
            android:id="@+id/meals"
            android:icon="@drawable/meal"
            android:title="@string/meals"
            android:visible="true"/>



    </group>


    <item android:title="">
        <menu>



            <item
                android:id="@+id/exit"
                android:icon="@drawable/home"
                android:title="@string/main_home" />

            <item
                android:id="@+id/LogOut"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
