<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.ui.devartlink.calender.CalenderActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.kizitonwose.calendarview.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cv_dayViewResource="@layout/calendar_day_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back" />

        <LinearLayout
            android:id="@+id/linear_and_event"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_event"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_blue"
                android:text="@string/add_event"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/label"
                android:textColor="@color/colorGray4"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cd_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/view_all"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:buttonTint="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/cd_Task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/task"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:buttonTint="@color/yellow" />

            <CheckBox
                android:id="@+id/cd_Request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/request"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:buttonTint="@color/red" />

            <CheckBox
                android:id="@+id/cd_Event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/event"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:buttonTint="@color/colorOrange" />

            <CheckBox
                android:id="@+id/cd_Holiday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/holiday"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:buttonTint="@color/color_20F109" />

            <CheckBox
                android:id="@+id/cd_meeting_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/meeting_room"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:buttonTint="@color/color_00a7ff" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btn_hide_show_event"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_blue_rigth"
            android:contentDescription="@string/img"
            android:gravity="center"
            android:src="@drawable/ic_show_event"
            app:layout_constraintStart_toEndOf="@+id/linear_and_event"
            app:layout_constraintTop_toBottomOf="@id/back" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>