<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_new_task"
                android:textColor="@color/black"
                android:textSize="18dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/newTaskEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="@string/task_description"
                android:background="@drawable/rounded_grey"
                android:minHeight="150dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">




            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/newTaskAddButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button"
                android:text="@string/add"
                android:layout_centerInParent="true"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>